@@ -26,9 +26,7 @@ import interface_adapter.dashboard.DashboardController;
 import interface_adapter.persona.PersonaController;
 import interface_adapter.view_personas.ViewPersonasState;
 import interface_adapter.view_personas.ViewPersonasViewModel;
-import interface_adapter.vision.VisionController;
 import use_case.compare_personas.ComparePersonasInputData;
-import use_case.generate_visuals.GenerateVisualInputData;
 
 /**
  * The View for listing personas and comparing them.
@@ -50,7 +48,6 @@ public class PersonaListView extends JPanel implements PropertyChangeListener {
     private DashboardController dashboardController;
 
     private ComparePersonasController comparePersonasController;
-    private VisionController visionController;
 
     public PersonaListView(ViewPersonasViewModel viewModel,
                            ComparePersonasViewModel compareViewModel) {
@@ -131,21 +128,16 @@ public class PersonaListView extends JPanel implements PropertyChangeListener {
         // Collect the selected persona
         final List<Persona> selectedPersonas = getSelectedPersonas();
 
-        final Pitch pitch = viewModel.getState().getThisPitch();
-
-        final String prompt = "Generate an advertisement for " + pitch.getName() + " targeting "
-                + selectedPersonas.getFirst().getName();
-
         if (selectedPersonas.size() != 1) {
             JOptionPane.showMessageDialog(
                     this, "Please select exactly one persona to generate a vision.");
             return;
         }
 
-        final GenerateVisualInputData inputData = new GenerateVisualInputData(prompt,
-                selectedPersonas.getFirst(),
-                pitch);
-        visionController.generateImage(inputData);
+        // TODO: Implement the vision generation feature
+        JOptionPane.showMessageDialog(
+                this, "Vision generation for "
+                        + selectedPersonas.get(0).getName() + " is not yet implemented.");
     }
 
     private void handleChatButton() {
@@ -186,10 +178,6 @@ public class PersonaListView extends JPanel implements PropertyChangeListener {
 
     public void setDashboardController(DashboardController dashboardController) {
         this.dashboardController = dashboardController;
-    }
-
-    public void setVisionController(VisionController visionController) {
-        this.visionController = visionController;
     }
 
     public String getViewName() {
